# kembang.ai

./: .dockerignore  .env.example  .gitignore  .gitmessage  Dockerfile  README.md  alembic.ini  clear_and_seed_faqs.py  docker-compose.yml  pyproject.toml  test_faq_db.py  test_phase2.py  test_product_crud.py  test_response_cache.py  test_sales_integration.py  test_smart_faq.py
_context/: api-contract.md  architecture.md  audit-1.md  coding-rules.md  conversation.md  database.md  deployment.md  folder-structure.md  hybrid-optimization.md  implementation_plan.md  init.md  knowledge-base.md  monitoring.md  rag-implementation.md  rag-system.md  roadmap.md  security.md  service-layer-design.md  tech-stack.md  tools-system.md
_md/: ADMIN_OPTIMIZATIONS_COMPLETE.md  BACKEND_TEAM_TEST_RESULTS.md  CLEANUP_SUMMARY.md  DATABASE_ANALYSIS_DEEP_DIVE.md  DEPLOYMENT.md  PERFORMANCE_OPTIMIZATIONS_COMPLETE.md  SECURITY_HARDENING_COMPLETE.md  SECURITY_TESTING_RESULTS.md  endpoint-roadmap.md
alembic/: env.py
app/: __init__.py  main.py
tests/: check_faqs_in_db.py  create_test_pdf.py  create_test_user.py  debug_documents.py  generate_jwt_secret.py  get_user_info.py  ingest_sample.py  list_tenants.py  list_users.py  list_users_clean.py  reingest_docs.py  requirements.txt  reset_admin.py  seed_faqs.py  seed_products.py  seed_superadmin.py  test_api_comprehensive.py  test_chat_pdf.py  test_delete.py  test_e2e.py  test_faq_debug.py  test_faq_from_db.py  test_greeting.py  test_hybrid_extractor.py  test_intent_router.py  test_omnichannel.py  test_pdf_debug.py  test_pdf_manual.py  (+6 more)
(+71 files in other folders)
